changed epub theme for displaying covers correctly

--- a/static/nx_epub.css
+++ b/static/nx_epub.css
@@ -16,21 +16,29 @@
 }
 
 .cover{
-    text-align: center;
+    font-family: "MerriweatherSans-Light";
+    text-align: right;
+    color:#000;
 }
-
-div.cover {
-    border: 4px dashed #76B41F;
+#cover-inside{
+    width: 100%;
+    height:100%;
+}
+#covertext{
+    position: absolute;
+    right:30px;
+    top: 80px;
+    width: 70%;
 }
 h1.cover, h2.cover, h3.cover{
     border-bottom: none;
-    text-align: center;
+    text-align: right;
 }
 
 .discreet {
     font-family: "MerriweatherSans-Light";
     font-size: 8px;
-    text-align: center;
+    text-align: right;
     vertical-align: middle;
     color:#ccc;
 }
